--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -8,17 +8,62 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.my.game.wesport.ChatActivity">
+    tools:context="com.my.game.wesport.ui.ChatActivity">
 
-    <ListView
-        android:id="@+id/messageListView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/linearLayout"
-        android:divider="@android:color/transparent"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"
-        tools:listitem="@layout/item_message"/>
+        android:layout_above="@+id/divider"/>
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_gravity="bottom"
+        android:background="@color/divider"
+        android:layout_above="@+id/senderContainer"/>
+    <RelativeLayout
+        android:id="@+id/senderContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/bg_user_message"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="4dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp">
+
+        <EditText
+            android:id="@+id/edit_text_message"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#555555"
+            android:textSize="14sp"
+            android:hint="Type your message"
+            android:gravity="top"
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/btn_send_message"/>
+        <Button
+            android:id="@+id/btn_send_message"
+            android:layout_marginEnd="10dp"
+            android:textColor="#FFFFFF"
+            android:layout_width="72dp"
+            android:layout_height="40dp"
+            android:text="Send"
+            android:background="@color/colorAccent"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_for_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
+
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -32,27 +77,11 @@
 
         <ImageButton
             android:id="@+id/photoPickerButton"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@android:drawable/ic_menu_gallery"
             android:contentDescription="@string/accessibility_photopicker"/>
 
-        <EditText
-            android:id="@+id/messageEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:inputType="text"
-            tools:ignore="LabelFor"/>
-
-        <Button
-            android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:enabled="false"
-            android:text="@string/send_button_label"/>
 
     </LinearLayout>
 
