--- a/app/src/main/res/menu/list_signout.xml
+++ b/app/src/main/res/menu/list_signout.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/sign_out_menu"
+        android:id="@+id/action_logout"
         android:title="@string/sign_out"
         app:showAsAction="never"/>
 </menu>
