--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -4,8 +4,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-    android:background="#FFFFFF">
+                android:layout_marginBottom="4dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_avatar"
