--- a/app/src/main/res/layout/custom_info_content.xml
+++ b/app/src/main/res/layout/custom_info_content.xml
@@ -3,7 +3,8 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
-              android:weightSum="1">
+              android:weightSum="1"
+              android:background="@color/white" >
     <ImageView
         android:id="@+id/place_image"
         android:layout_width="128dp"
@@ -36,12 +37,24 @@
             android:layout_height="wrap_content"
             android:textColor="#ff7f7f7f"
             android:textSize="14sp" />
-
+        <TextView
+            android:id="@+id/open_now_label"
+            android:text="Opennow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@color/colorPrimaryLight"
+            android:layout_weight="2">
         <TextView
             android:id="@+id/open_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>
+            </LinearLayout>
         <RatingBar
             android:id="@+id/place_rating"
             style="?android:attr/ratingBarStyleSmall"
