--- a/app/src/main/res/layout/custom_info_content.xml
+++ b/app/src/main/res/layout/custom_info_content.xml
@@ -47,14 +47,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:background="@color/colorPrimaryLight"
-            android:layout_weight="2">
+            android:background="@color/colorPrimaryLight">
         <TextView
             android:id="@+id/open_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>
-            </LinearLayout>
+
+        </LinearLayout>
         <RatingBar
             android:id="@+id/place_rating"
             style="?android:attr/ratingBarStyleSmall"
