--- a/app/src/main/res/layout/custom_info_content.xml
+++ b/app/src/main/res/layout/custom_info_content.xml
@@ -3,58 +3,21 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
-              android:weightSum="1"
               android:background="@color/white" >
-    <ImageView
-        android:id="@+id/place_image"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        android:layout_marginEnd="8dp"
-        android:scaleType="center"
-        android:contentDescription="@string/accessibility_place"
-        android:adjustViewBounds="true" />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/colorPrimaryLight"
-        android:layout_weight="2">
-
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical"
+                  android:layout_weight="2">
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
             android:maxLines="1"
             android:textColor="#ff000000"
             android:textSize="14sp"
             android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/snippet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#ff7f7f7f"
-            android:textSize="14sp" />
-        <TextView
-            android:id="@+id/open_now_label"
-            android:text="Opennow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"/>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@color/colorPrimaryLight">
-        <TextView
-            android:id="@+id/open_now"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"/>
-
-        </LinearLayout>
         <RatingBar
             android:id="@+id/place_rating"
             style="?android:attr/ratingBarStyleSmall"
@@ -63,6 +26,37 @@
             android:isIndicator="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/snippet"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ff7f7f7f"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/open_now"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/material_green_500"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/place_image"
+                android:layout_weight="0.4"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:scaleType="center"
+                android:contentDescription="@string/accessibility_place"
+                android:adjustViewBounds="true" />
     </LinearLayout>
 
 </LinearLayout>
