--- a/app/src/main/res/layout/custom_info_content.xml
+++ b/app/src/main/res/layout/custom_info_content.xml
@@ -3,13 +3,13 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
+              android:baselineAligned="false"
               android:background="@color/white" >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="0dp"
+                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:orientation="vertical"
-                  android:layout_weight="2">
+                  android:orientation="vertical">
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
