modified files for chat receipient name in app bar

--- a/app/src/main/res/layout/layout_sender_message.xml
+++ b/app/src/main/res/layout/layout_sender_message.xml
@@ -9,13 +9,13 @@
         android:layout_height="wrap_content"
         tools:text="I am doing ok"
         android:padding="8dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="2dp"
         android:textStyle="bold"
         android:textSize="14sp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorPrimaryLight"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/sender_rounded_corners"/>
