--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,7 +14,9 @@
         android:id="@+id/recycler_view_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/divider"/>
+        android:layout_above="@+id/divider"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/progress_for_chat"/>
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
@@ -35,16 +37,16 @@
 
         <EditText
             android:id="@+id/edit_text_message"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="30dp"
-            android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:textColor="#555555"
             android:textSize="14sp"
             android:hint="Type your message"
             android:gravity="top"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/btn_send_message"/>
+            android:layout_toStartOf="@+id/btn_send_message"
+            android:layout_width="260dp"/>
         <Button
             android:id="@+id/btn_send_message"
             android:layout_marginEnd="10dp"
@@ -74,14 +76,6 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/photoPickerButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@android:drawable/ic_menu_gallery"
-            android:contentDescription="@string/accessibility_photopicker"/>
-
 
     </LinearLayout>
 
