--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -16,6 +16,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="end|bottom"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/share"
+            tools:ignore="RtlHardcoded"/>
+
         <ProgressBar
             android:id="@+id/progress_bar_users"
             style="?android:attr/progressBarStyleLarge"
@@ -24,14 +33,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:visibility="gone"/>
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_marginRight="16dp"
-            android:src="@drawable/newgamelogo"
-            tools:ignore="RtlHardcoded"/>
+
         <FrameLayout
             android:id="@+id/snackbar_layout"
             android:layout_width="match_parent"
