--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -175,8 +175,8 @@
                 android:id="@+id/edit_game_notes"
                 style="@style/EditorFieldStyle"
                 android:hint="@string/hint_game_notes"
-                android:inputType="text"
-                android:selectAllOnFocus="true"/>
+                android:focusable="false"
+                android:inputType="text"/>
 
         </LinearLayout>
     </LinearLayout>
