--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -18,7 +18,7 @@
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"/>
 
         <ImageView
             android:id="@+id/empty_shelter_image"
@@ -67,5 +67,4 @@
             app:pressedTranslationZ="12dp"
             tools:ignore="RtlHardcoded"/>
 
-    </RelativeLayout>
 </RelativeLayout>
