final Verson2 files

--- a/app/src/main/res/layout/activity_deep_link.xml
+++ b/app/src/main/res/layout/activity_deep_link.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -18,7 +19,8 @@
             android:layout_marginBottom="10dp"
             android:text="@string/invite_dialog_title"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            tools:ignore="PrivateResource"/>
 
     </LinearLayout>
 
@@ -42,7 +44,7 @@
             android:id="@+id/invitation_id_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
+            android:maxLines="1"
             android:ellipsize="end"
             android:text="@string/invitation_id_default"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
