--- a/app/src/main/res/layout/layout_recipient_message.xml
+++ b/app/src/main/res/layout/layout_recipient_message.xml
@@ -10,8 +10,8 @@
         tools:text="Hi. How are you?"
         android:padding="8dp"
         android:textStyle="bold"
-        android:layout_marginRight="60dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="2dp"
         android:textColor="#727272"
