--- a/app/src/main/res/menu/list_signout.xml
+++ b/app/src/main/res/menu/list_signout.xml
@@ -4,5 +4,9 @@
     <item
         android:id="@+id/action_logout"
         android:title="@string/sign_out"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_invite"
+        android:title="@string/invite_friends"
+        app:showAsAction="never" />
 </menu>
