--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,4 +51,14 @@
     <dimen name="connection_status_padding">8dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
     <!-- Tabbed activity-->
+
+
+        <!-- Default screen margins, per the Android Design guidelines. -->
+        <dimen name="nav_header_vertical_spacing">16dp</dimen>
+        <dimen name="nav_header_height">175dp</dimen>
+
+        <!-- Default screen margins, per the Android Design guidelines. -->
+        <dimen name="profile_width">75dp</dimen>
+        <dimen name="profile_height">75dp</dimen>
+    <dimen name="thickness">5dp</dimen>
 </resources>
