--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,36 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:background="#e0f2d2"
     tools:context="com.my.game.wesport.ui.ChatActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/divider"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/progress_for_chat"/>
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_gravity="bottom"
-        android:background="@color/divider"
-        android:layout_above="@+id/senderContainer"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
     <RelativeLayout
         android:id="@+id/senderContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_user_message"
+        android:paddingBottom="1dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="4dp"
+        android:paddingTop="8dp"
+        android:background="#e0f2d2"
         android:layout_alignParentBottom="true"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp">
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/edit_text_message"
@@ -41,21 +34,31 @@
             android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:textColor="#555555"
-            android:textSize="14sp"
+            android:textSize="18sp"
+            android:background="@drawable/backgroundmsg"
             android:hint="Type your message"
-            android:gravity="top"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/btn_send_message"
-            android:layout_width="260dp"/>
+            android:gravity="fill_vertical"
+            android:layout_width="290dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true" />
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl"
+        android:background="@drawable/send_round_background"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="11dp"
+        android:layout_marginRight="10sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true">
         <Button
             android:id="@+id/btn_send_message"
             android:layout_marginEnd="10dp"
-            android:textColor="#FFFFFF"
-            android:layout_width="72dp"
-            android:layout_height="40dp"
-            android:text="Send"
-            android:background="@color/colorAccent"
-            android:layout_alignParentEnd="true"/>
+            android:layout_width="20dp"
+            android:layout_margin="14dp"
+            android:layout_height="25dp"
+            android:background="@drawable/ic_send_black_24dp" />
     </RelativeLayout>
 
     <ProgressBar
@@ -66,7 +69,6 @@
         android:layout_centerHorizontal="true"
         android:visibility="gone"/>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,7 +77,8 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="horizontal"
-        tools:ignore="UselessLeaf">
+        tools:ignore="UselessLeaf"
+        android:id="@+id/linearLayout">
 
     </LinearLayout>
 
