--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -7,35 +7,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin"
-    tools:context=".EditorActivity">
+    tools:context=".GameEditActivity">
 
     <!-- Overview Games -->
     <LinearLayout
-        android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <!-- Label -->
+    <TextView
+        style="@style/CategoryStyle"
+        android:text="@string/game_description"/>
+    <!-- Input fields -->
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <!-- Label -->
-        <TextView
-            style="@style/CategoryStyle"
-            android:text="@string/game_description"/>
-        <!-- Input fields -->
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:orientation="vertical">
-            <!-- Name field -->
-            <EditText
-                android:id="@+id/edit_game_name"
-                style="@style/EditorFieldStyle"
-                android:hint="@string/hint_game_name"
-                android:inputType="textCapWords"/>
-        </LinearLayout>
-
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:orientation="vertical">
+        <!-- Name field -->
+        <EditText
+            android:id="@+id/edit_game_name"
+            style="@style/EditorFieldStyle"
+            android:hint="@string/hint_game_name"
+            android:inputType="textCapWords"/>
     </LinearLayout>
+
+</LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
