--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -19,16 +19,6 @@
             android:layout_alignParentStart="true"
             android:layout_margin="16dp"/>
 
-
-        <ProgressBar
-            android:id="@+id/progress_bar_users"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:visibility="gone"/>
-
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -36,8 +26,7 @@
             android:layout_gravity="bottom|end"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="32dp"
-            android:layout_marginRight="16dp"
+            android:layout_margin="16dp"
             app:pressedTranslationZ="12dp"
             android:src="@drawable/share"
             tools:ignore="RelativeOverlap,RtlHardcoded"/>
