--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -1,160 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
-
+    android:fitsSystemWindows="true">
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_layout"
+
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-        <FrameLayout
-            android:id="@+id/frame_layout_user_profile"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            android:orientation="vertical"
-            app:layout_collapseMode="parallax">
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleTextAppearance="@color/transparent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/user_profile_cover_image"
-                android:onClick="onCoverImageClick"
-                android:clickable="true"
-                tools:src="@drawable/profile"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                android:scaleType="centerCrop" />
+                android:layout_height="match_parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/user_profile_image"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:clickable="true"
-                android:src="@drawable/profile"
-                app:civ_border_color="#FFFFFFFF"
-                app:civ_border_width="1dp" />
-        </FrameLayout>
+                <ImageView
+                    android:scaleType="centerCrop"
+                    android:id="@+id/user_profile_cover_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/profile"
+                    app:layout_collapseMode="parallax" />
+
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/user_profile_image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="50dp"
+                    android:layout_marginTop="50dp"
+                    android:src="@drawable/profile"
+                    app:layout_collapseMode="parallax" />
+
+
+            </FrameLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+        </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.my.game.wesport.UserProfileActivity"
+        tools:showIn="@layout/activity_profile_user">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="30dp">
 
-            <!-- Label -->
-            <TextView
-                style="@style/CategoryStyle"
-                android:text="Email"
-                android:textColor="#000"
-                android:textSize="20sp" />
-            <!-- Input fields -->
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:orientation="vertical"
-                android:paddingEnd="4dp"
-                android:paddingStart="4dp">
-                <!-- Name field -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
                 <TextView
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:id="@+id/text_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textColor="#000" />
+
+                <TextView
+                    android:textSize="20sp"
+                    android:textColor="#30d338"
+                    android:text="Your Email"
+                    android:layout_marginLeft="25sp"
                     android:id="@+id/email_user_profile"
-                    style="@style/EditorFieldStyle"
-                    android:hint="Your Email"
-                    android:inputType="textCapWords"
-                    android:textColor="#30d338"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/text_email"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp">
-
-            <!-- Label -->
-            <TextView
-                style="@style/CategoryStyle"
-                android:text="Name"
-                android:textColor="#000"
-                android:textSize="20sp" />
-            <!-- Input fields -->
-            <LinearLayout
-                android:layout_width="0dp"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:orientation="vertical"
-                android:paddingEnd="4dp"
-                android:paddingStart="4dp">
-                <!-- Name field -->
+                android:layout_marginTop="20sp">
+
+                <TextView
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:paddingTop="10dp"
+                    android:id="@+id/text_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textColor="#000" />
+
                 <EditText
+                    android:hint="Your Name"
+                    android:textSize="20sp"
+                    android:textColor="#30d338"
+                    android:layout_marginLeft="15sp"
                     android:id="@+id/edit_user_profile_name"
-                    style="@style/EditorFieldStyle"
-                    android:enabled="false"
-                    android:hint="Enter Your Name"
-                    android:inputType="textCapWords"
-                    android:textColor="#30d338"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/text_name"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp">
-
-            <!-- Label -->
-            <TextView
-                style="@style/CategoryStyle"
-                android:text="Bio"
-                android:textColor="#000"
-                android:textSize="20sp" />
-            <!-- Input fields -->
-            <LinearLayout
-                android:layout_width="0dp"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:orientation="vertical"
-                android:paddingEnd="4dp"
-                android:paddingStart="4dp">
-                <!-- Name field -->
+                android:layout_marginTop="10sp">
+
+                <TextView
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:id="@+id/text_bio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bio"
+                    android:paddingTop="10dp"
+                    android:textColor="#000" />
+
                 <EditText
+                    android:hint="Your Bio"
+                    android:textColor="#30d338"
+                    android:layout_marginLeft="38sp"
                     android:id="@+id/user_bio"
-                    style="@style/EditorFieldStyle"
-                    android:enabled="false"
-                    android:hint="Bio"
                     android:inputType="textMultiLine"
                     android:maxLines="5"
-                    android:textColor="#30d338"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/text_bio"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
+            </RelativeLayout>
+
         </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
