--- a/app/src/main/res/layout/custom_info_nearby.xml
+++ b/app/src/main/res/layout/custom_info_nearby.xml
@@ -15,10 +15,10 @@
         android:paddingBottom="5dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:paddingTop="5dp">
+        android:paddingTop="15dp">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/nearby_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -27,31 +27,21 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <RatingBar
-            android:layout_marginTop="5dp"
-            android:id="@+id/place_rating"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:isIndicator="false"
-            android:numStars="5"
-            android:rating="0" />
-
         <TextView
-            android:id="@+id/snippet"
+            android:id="@+id/nearby_user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textColor="#ff7f7f7f"
             android:textSize="14sp" />
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/open_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textColor="@color/material_green_500"
-            android:textStyle="bold" />
+            android:textStyle="bold" />-->
 
     </LinearLayout>
 
@@ -61,9 +51,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/place_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/nearby_user_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_weight="0.4"
             android:adjustViewBounds="true"
             android:contentDescription="@string/accessibility_place"
