--- a/app/src/main/res/menu/menu_catalog.xml
+++ b/app/src/main/res/menu/menu_catalog.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".CatalogActivity">
+    tools:context=".GameListFragment">
 
     <item
         android:id="@+id/action_delete_all_entries"
