--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,11 +24,12 @@
 
     <color name="game_notes_text">#607D8B</color>
 
-    <!-- the user chat state color -->
+    <!-- the userModel chat state color -->
 
     <color name="bg_user_message">#ffffff</color>
     <color name="divider">#B6B6B6</color>
     <color name="text_color_icon">#212121</color>
+    <color name="transparent">#00000000</color>
 
 
 </resources>
