--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -65,26 +73,21 @@
         <item name="android:fontFamily">sans-serif-light</item>
     </style>
 
-    <style name="FirebaseUI.Text.TextInputLayout" parent="@style/FirebaseUI.EditText"/>
+    <style name="FirebaseUI.Text.TextInputLayout" parent="@style/FirebaseUI.EditText" />
 
-    <style name="FirebaseUI.Text.HintText" parent="@style/FirebaseUI.EditText"/>
+    <style name="FirebaseUI.Text.HintText" parent="@style/FirebaseUI.EditText" />
 
     <style name="FirebaseUI.ImageView.VisibilityToggle" parent="@style/FirebaseUI.EditText">
         <item name="android:visibility">gone</item>
     </style>
 
-    <style name="FirebaseUI.Text.Link" parent="FirebaseUI.EditText"/>
+    <style name="FirebaseUI.Text.Link" parent="FirebaseUI.EditText" />
 
-    <style name="FirebaseUI.Text.BodyText" parent="FirebaseUI.EditText"/>
+    <style name="FirebaseUI.Text.BodyText" parent="FirebaseUI.EditText" />
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MyMaterialTheme" parent="MyMaterialTheme.Base">
 
