--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -61,4 +61,5 @@
         <dimen name="profile_width">75dp</dimen>
         <dimen name="profile_height">75dp</dimen>
     <dimen name="thickness">5dp</dimen>
+    <dimen name="grid_image_space">2dp</dimen>
 </resources>
