--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -4,10 +4,13 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:focusable="true"
     android:padding="@dimen/activity_margin">
 
     <LinearLayout
+        android:layout_gravity="center_vertical"
         android:layout_width="50dp"
+        android:focusable="false"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -37,6 +40,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:focusable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -49,50 +53,60 @@
             android:fontFamily="sans-serif-medium"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="#2B3D4D"
-            tools:text="Tournament" />
+            tools:text="Tournament"
+            android:maxLines="2"
+            android:capitalize="sentences"
+            android:ellipsize="end"/>
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/event_start_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="#919191"
-        tools:text="23/04/2017"
-        android:paddingRight="10dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:paddingRight="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="#919191"
-        android:text="At" />
-    <TextView
-        android:id="@+id/event_start_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="#919191"
-        tools:text="05:37 pm" />
-    <ImageView
-        android:visibility="gone"
-        android:layout_marginLeft="90sp"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/ic_navigate_next_black_24dp" />
-</LinearLayout>
+            <TextView
+                android:id="@+id/event_start_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:paddingRight="10dp"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="#919191"
+                tools:text="23/04/2017" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:paddingRight="10dp"
+                android:text="At"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="#919191" />
+
+            <TextView
+                android:id="@+id/event_start_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textColor="#919191"
+                tools:text="05:37 pm" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="90sp"
+                android:background="@drawable/ic_navigate_next_black_24dp"
+                android:visibility="gone" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/event_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:text="Description"/>
+            android:text="Description"
+            android:maxLines="3"
+            android:capitalize="sentences"
+            android:ellipsize="end"
+            android:textColor="#000" />
 
     </LinearLayout>
 
